Add all params to config

--- a/local.config
+++ b/local.config
@@ -1,1 +1,6 @@
 mongo.mongoUri=mongo
+mmsGroupId=56d75791e4b0510fdd0e66b2
+mmsBaseUrl=https://mms.mongodb.com
+mmsApiKey=596006bbd383ad6ffd32d535d1a7c2d0108b5942c2df04d3d89c348c
+sslRequireValidMMSServerCertificates=false
+sslTrustedMMSServerCertificate=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
