--- a/local.config
+++ b/local.config
@@ -1,6 +1,50 @@
-mongo.mongoUri=mongo
+# REQUIRED
+# Enter your Group ID - It can be found at https://cloud.mongodb.com/settings/group
+#
 mmsGroupId=56d75791e4b0510fdd0e66b2
+
+
+#
+# REQUIRED
+# Enter your API key - It can be found at https://cloud.mongodb.com/settings/group
+#
+mmsApiKey=596d0ffb0bd66b3e9b7fc22fffda10876a682f74144f6e2566543314
+
+
+#
+# Base url of the MMS web server.
+#
 mmsBaseUrl=https://mms.mongodb.com
-mmsApiKey=596006bbd383ad6ffd32d535d1a7c2d0108b5942c2df04d3d89c348c
-sslRequireValidMMSServerCertificates=false
-sslTrustedMMSServerCertificate=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+
+#
+# Path to log file
+#
+logFile=/var/log/mongodb-mms-automation/automation-agent.log
+
+#
+# Path to backup cluster config to
+#
+mmsConfigBackup=/var/lib/mongodb-mms-automation/mms-cluster-config-backup.json
+
+#
+# Lowest log level to log.  Can be (in order): DEBUG, ROUTINE, INFO, WARN, ERROR, DOOM
+#
+logLevel=INFO
+
+#
+# Maximum number of rotated log files
+#
+maxLogFiles=10
+
+#
+# Maximum size in bytes of a log file (before rotating)
+#
+maxLogFileSize=268435456
+
+#
+# URL to proxy all HTTP requests through
+#
+#httpProxy=
+
+# For additional optional settings, please see
+# https://docs.cloud.mongodb.com/reference/automation-agent/
